--- a/tasks/2019/05/6.yaml
+++ b/tasks/2019/05/6.yaml
@@ -2,5 +2,5 @@
 :title: Journal for 02/09/19
 :tasks:
 - :text: Get cat food
-  :complete: false
-  :created_at: '2019-02-09 11:03:18 +0000'
+  :complete: true
+  :created_at: '2019-02-09 16:46:24 +0000'
